<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.team12.view.homePage.HomePageActivity">

    <TextView
        android:id="@+id/home_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/home_header"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_manager_log_in_button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/button"
        android:text="@string/home_log_in_manager"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/home_sign_up_button"
        app:layout_constraintStart_toStartOf="@+id/home_sign_up_button"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/home_customer_log_in_button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="@color/button"
        android:text="@string/home_log_in_customer"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_header"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/home_sign_up_button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button"
        android:text="@string/home_sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/home_customer_log_in_button"
        app:layout_constraintStart_toStartOf="@+id/home_customer_log_in_button"
        app:layout_constraintTop_toBottomOf="@+id/home_customer_log_in_button"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
