<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.team12.view.customerMain.CustomerMainActivity">

    <Button
        android:id="@+id/customer_main_view_mail_button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button"
        android:text="@string/customer_main_view_mail"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/customer_main_draft_order_button"
        app:layout_constraintStart_toStartOf="@+id/customer_main_draft_order_button"
        app:layout_constraintTop_toBottomOf="@+id/customer_main_draft_order_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/customer_main_log_out_button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button"
        android:text="@string/log_out_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/customer_main_view_mail_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/customer_main_view_mail_button"
        app:layout_constraintTop_toBottomOf="@+id/customer_main_view_mail_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/customer_main_draft_order_button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button"
        android:text="@string/customer_main_draft_order_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/customer_main_new_order_button"
        app:layout_constraintStart_toStartOf="@+id/customer_main_new_order_button"
        app:layout_constraintTop_toBottomOf="@+id/customer_main_new_order_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/customer_main_new_order_button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button"
        android:text="@string/customer_main_new_order_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_main_header"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/customer_main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/customer_main_header"
        android:textColor="@color/text"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/customer_main_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
