<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recall_batch_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/recall_batch_button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button"
        android:text="@string/recall_batch_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recall_batch_batch"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/recall_batch_batch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/restock_products_batch"
        android:textColor="@color/text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/recall_batch_EOF"
        app:layout_constraintTop_toBottomOf="@+id/recall_batch_EOF" />

    <EditText
        android:id="@+id/recall_batch_batch_field"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="BatchID"
        android:inputType="number"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="@+id/recall_batch_batch"
        app:layout_constraintEnd_toEndOf="@+id/recall_batch_EOF_field"
        app:layout_constraintStart_toStartOf="@+id/recall_batch_EOF_field" />

    <EditText
        android:id="@+id/recall_batch_EOF_field"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="EOF #"
        android:inputType="number"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="@+id/recall_batch_EOF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recall_batch_EOF" />

    <TextView
        android:id="@+id/recall_batch_EOF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/restock_products_EOF"
        android:textColor="@color/text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recall_batch_header" />

    <TextView
        android:id="@+id/recall_batch_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/recall_batch_header"
        android:textColor="@color/text"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
